--- a/index.css
+++ b/index.css
@@ -70,9 +70,10 @@ p {
 
 /*style du menu*/
 nav {
-    background-color: #333;
+    background-color: #007bff;
     padding: 10px;
     text-align: center; /* Centre le menu horizontalement */
+    color:white;
 }
 
 .menu {
