--- a/index.css
+++ b/index.css
@@ -74,6 +74,8 @@ nav {
     list-style-type: none; /* Supprime les puces des listes */
     padding: 0;
     margin: 0;
+    display:flex;
+    justify-content: center;
 }
 
 .menu li {
@@ -81,7 +83,7 @@ nav {
     margin: 0 10px; /* Espacement entre les éléments */
 }
 
-.menu a {
+.menu li a {
     color: white;
     text-decoration: none;
     padding: 10px 20px;
@@ -89,6 +91,7 @@ nav {
     font-family: sans-serif;
     font-size: 14px;
     border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .menu a:hover {
