--- a/index.css
+++ b/index.css
@@ -78,6 +78,7 @@ nav {
     margin: 0;
     display:flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .menu li {
@@ -94,6 +95,8 @@ nav {
     font-size: 14px;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
+    width: 10px;
+    text-align: center;
 }
 
 .menu a:hover {
