--- a/index.css
+++ b/index.css
@@ -1,15 +1,16 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     background-color: white;
-    display: flex;
-    justify-content: center;
     margin: 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    justify-content: flex-start;
+    min-height: 100vh;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
+
 h1, h3, p {
     text-align: center;
 }
@@ -50,10 +51,11 @@ h1, h3, p {
     margin: 5px;
     cursor: pointer;
     border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 .btn:hover {
-    background-color: #007bff;
+    background-color: #0056b3;
 }
 
 .btn.correct {
@@ -64,43 +66,41 @@ h1, h3, p {
     background-color: #dc3545;
 }
 
-/*style du menu*/
+/* Style du menu */
 nav {
     background-color: #007bff;
     padding: 10px;
-    text-align: center; /* Centre le menu horizontalement */
-    color:white;
+    width: 100%;
+    text-align: center;
+    color: white;
 }
 
 .menu {
-    list-style-type: none; /* Supprime les puces des listes */
+    list-style-type: none;
     padding: 0;
     margin: 0;
-    display:flex;
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
 
 .menu li {
-    display: inline-block; /* Affiche les éléments de la liste en ligne */
-    margin: 0 10px; /* Espacement entre les éléments */
+    margin: 0 10px;
 }
 
 .menu li a {
     color: white;
     text-decoration: none;
     padding: 10px 20px;
-    display: inline-block;
     font-family: sans-serif;
     font-size: 14px;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
-    width: 10px;
-    text-align: center;
+    display: block;
 }
 
-.menu a:hover {
-    background-color: #555; /* Change la couleur de fond au survol */
+.menu li a:hover {
+    background-color: #0056b3;
 }
 
 /* Responsive styles */
