--- a/index.css
+++ b/index.css
@@ -97,6 +97,7 @@ nav {
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
     display: block;
+    width: auto;
 }
 
 .menu li a:hover {
