--- a/index.css
+++ b/index.css
@@ -5,68 +5,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    min-height: 100vh;
     width: 100%;
     overflow-x: hidden;
 }
 
 h1, h3, p {
     text-align: center;
+    padding: 0 10px;
 }
 
-#timer {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-}
-
-#quiz-container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    max-width: 500px;
-    width: 100%;
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#question-container {
-    margin-bottom: 20px;
-}
-
-.btn-container {
-    margin-top: 20px;
-}
-
-.btn {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.btn:hover {
-    background-color: #0056b3;
-}
-
-.btn.correct {
-    background-color: #28a745;
-}
-
-.btn.wrong {
-    background-color: #dc3545;
-}
-
-/* Style du menu */
 nav {
     background-color: #007bff;
     padding: 10px;
@@ -97,14 +44,12 @@ nav {
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
     display: block;
-    width: auto;
 }
 
 .menu li a:hover {
     background-color: #0056b3;
 }
 
-/* Responsive styles */
 @media (max-width: 768px) {
     .menu {
         flex-direction: column;
