--- a/index.css
+++ b/index.css
@@ -54,9 +54,11 @@ nav {
     .menu {
         flex-direction: column;
         align-items: center;
+        display: block;
     }
 
     .menu li {
         margin: 10px 0;
+        flex-direction: row;
     }
 }
