--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 400px;
+    height: 1020px;
     overflow-x: hidden;
 }
 
