--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: auto;
+    width: 640px;
+    height: 1020px;
     overflow-x: hidden;
     box-sizing: border-box;
 }
