--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 640px;
-    height: 1100px;
+    width: 100%;
+    min-height: 100vh;
     overflow-x: hidden;
     box-sizing: border-box;
 }
