--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ nav {
     width: 100%;
     text-align: center;
     color: white;
+    box-sizing: border-box;
 }
 
 .menu {
@@ -31,6 +32,7 @@ nav {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
 
 .menu li {
@@ -56,9 +58,15 @@ nav {
     .menu {
         flex-direction: column;
         align-items: center;
+        width: 100%;
     }
 
     .menu li {
         margin: 10px 0;
+    }
+
+    .menu li a {
+        width: 100%;
+        text-align: center;
     }
 }
