--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    min-height: 200vh;
+    width: 320px;
+    min-height: 1100px;
     overflow-x: hidden;
     box-sizing: border-box;
 }
