--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 320px;
+    width: 100%;
     min-height: 1100px;
     overflow-x: hidden;
     box-sizing: border-box;
@@ -23,4 +23,21 @@ nav {
     text-align: center;
     color: white;
     box-sizing: border-box;
+}
+
+nav a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+}
+
+nav a:hover {
+    background-color: #0056b3; /* Couleur de survol */
+}
+
+@media (max-width: 600px) {
+    nav {
+        font-size: 14px;
+    }
 }
